# text_search_api

./: .dockerignore  .env.dist  .env.prod  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  posts.csv  pyproject.toml  requirements.prod.txt  requirements.txt  tox.ini  yoyo.ini
.github/workflows/: tests.yml
scripts/: down_env.sh  entrypoint.sh  init_env.sh  migration.sh  start_env.sh  start_environment.sh  stop_env.sh  stop_environment.sh
src/: load_data.py  main.py  pytest.ini
src/config/: settings.py
src/database/: db.py  dependencies.py  migrations.py
src/database/migrations/: 20221220_01_DfYwo-created-a-document-table.py
src/database/services/: deletes.py  inserts.py  selectors.py
src/database/services/documents/: deletes.py  selectors.py
src/elastic/: client.py  dependecies.py  indices.py
src/elastic/services/: deletes.py  selectors.py
src/scripts/: create_indices.py  docs_to_db.py  texts_to_index.py
src/tests/: conftest.py
src/tests/test_database/: conftest.py  test_services.py
src/tests/test_elastic/: test_client.py  test_services.py
src/tests/test_text_searcher/: test_services.py
src/text_searcher/: schemas.py  views.py
src/text_searcher/services/: deletes.py  selectors.py
