[tool.poetry]
name = "text-searcher"
version = "0.1.0"
description = "The application for searching documents via text fragments."
authors = ["Kirill <pnchkirill@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
asyncpg = "^0.27.0"
elasticsearch = {extras = ["async"], version = "^8.5.3"}
python-dotenv = "^0.21.0"
psycopg2 = "^2.9.5"
uvicorn = "^0.20.0"
yoyo-migrations = "^8.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
